--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack"
+    "dev": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AlbanMarku/todo.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "AlbanMarku",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AlbanMarku/todo/issues"
   },
   "homepage": "https://github.com/AlbanMarku/todo#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "webpack-cli": "^4.10.0"
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   }
 }
