--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "style-loader": "^3.3.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.2"
   }
 }
