--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo",
   "version": "1.0.0",
-  "description": "",
+  "description": "todo list practice project",
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production"
